--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "Hi"
+  title: "GEO511 Final Project"
   navbar:
     left:
       - href: index.qmd
@@ -11,6 +11,6 @@ website:
 
 format:
   html:
-    theme: cosmo
+    theme: spacelab
     includes:
         after_body: include/after_body.html
